fix: fix flatpickr not working on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -1420,6 +1420,14 @@ span.flatpickr-weekday {
   animation: fpFadeInDown 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
+@media (max-width: 767px) {
+  .flatpickr-calendar.animate.open.arrowTop,
+  .flatpickr-calendar.animate.open.arrowBottom {
+    -webkit-animation: none;
+    animation: none;
+  }
+}
+
 @-webkit-keyframes fpFadeInUp {
   from {
     opacity: 0;
